--- a/package.json
+++ b/package.json
@@ -1,15 +1,16 @@
 {
-  "name": "node_ts_structure(2020)",
+  "name": "node_ts_structure_2020",
   "version": "1.0.0",
   "main": "index.js",
   "author": "pablohariel <pablohhdr@gmail.com>",
   "license": "MIT",
   "scripts": {
-    "dev": "ts-node-dev --respawn --transpile-only --ignore-watch node_modules --no-notify src/server.ts"
+    "dev": "ts-node-dev -r tsconfig-paths/register --respawn --transpile-only --ignore-watch node_modules --no-notify src/server.ts"
   },
   "devDependencies": {
     "@types/express": "^4.17.9",
     "ts-node-dev": "^1.0.0",
+    "tsconfig-paths": "^3.9.0",
     "typescript": "^4.0.5"
   },
   "dependencies": {
