--- a/package.json
+++ b/package.json
@@ -5,12 +5,20 @@
   "author": "pablohariel <pablohhdr@gmail.com>",
   "license": "MIT",
   "scripts": {
+    "build": "babel src --extensions \".js,.ts\" --out-dir dist --copy-files --no-copy-ignored",
+    "start": "node dist/server.js",
     "dev": "ts-node-dev -r tsconfig-paths/register --respawn --transpile-only --ignore-watch node_modules --no-notify src/server.ts",
     "test": "jest"
   },
   "devDependencies": {
+    "@babel/cli": "^7.12.1",
+    "@babel/core": "^7.12.3",
+    "@babel/node": "^7.12.6",
+    "@babel/preset-env": "^7.12.1",
+    "@babel/preset-typescript": "^7.12.1",
     "@types/express": "^4.17.9",
     "@types/jest": "^26.0.15",
+    "babel-plugin-module-resolver": "^4.0.0",
     "eslint": "7.12.1",
     "jest": "^26.6.3",
     "ts-jest": "^26.4.4",
